--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "new-component": "new-component"
   },
   "dependencies": {
+    "new-component": "^5.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
